syntax = "proto3";

option csharp_namespace = "GrpcAPI";

import "shared.proto";

service Database {
    rpc CreateIndex (CreateIndexRequest) returns (SuccessResponse);
    rpc CreateIndexIfNotExist (CreateIndexRequest) returns (SuccessResponse);
    rpc DeleteIndex (DeleteIndexRequest) returns (SuccessResponse);
    rpc HasIndex (HasIndexRequest) returns (HasIndexResponse);
    rpc ListIndexes (ListIndexesRequest) returns (ListIndexesResponse);

    rpc CreateSet (CreateSetRequest) returns (SuccessResponse);
    rpc CreateSetIfNotExist (CreateSetRequest) returns (SuccessResponse);
    rpc DeleteSet (DeleteSetRequest) returns (SuccessResponse);
    rpc HasSet (HasSetRequest) returns (HasSetResponse);
    rpc ListSets (ListSetsRequest) returns (ListSetsResponse);

    rpc CreateTimeSeries (CreateTimeSeriesRequest) returns (SuccessResponse);
    rpc CreateTimeSeriesIfNotExist (CreateTimeSeriesRequest) returns (SuccessResponse);
    rpc DeleteTimeSeries (DeleteTimeSeriesRequest) returns (SuccessResponse);
    rpc HasTimeSeries (HasTimeSeriesRequest) returns (HasTimeSeriesResponse);
    rpc ListTimeSeries (ListTimeSeriesRequest) returns (ListTimeSeriesResponse);
}

message CreateIndexRequest {
    string database = 1;
    string indexName = 2;
    uint32 pageSize = 3;
}

message DeleteIndexRequest {
    string database = 1;
    string indexName = 2;
}

message HasIndexRequest {
    string database = 1;
    string indexName = 2;
}

message HasIndexResponse {
    bool hasIndex = 1;
  optional string error = 2;

}

message ListIndexesRequest {
    string database = 1;
}

message ListIndexesResponse {
    repeated string indexNames = 1;
    optional string error = 2;
}

message CreateSetRequest {
    string database = 1;
    string setName = 2;
}

message DeleteSetRequest {
    string database = 1;
    string setName = 2;
}

message HasSetRequest {
    string database = 1;
    string setName = 2;
}

message HasSetResponse {
    bool hasSet = 1;
    optional string error = 2;
}

message ListSetsRequest {
    string database = 1;
}

message ListSetsResponse {
    repeated string setNames = 1;
    optional string error = 2;
}

message CreateTimeSeriesRequest {
    string database = 1;
    string timeSeriesName = 2;
    uint32 pageSize = 3;
}

message DeleteTimeSeriesRequest {
    string database = 1;
    string timeSeriesName = 2;
}

message HasTimeSeriesRequest {
    string database = 1;
    string timeSeriesName = 2;
}

message HasTimeSeriesResponse {
    bool hasTimeSeries = 1;
    optional string error = 2;
}

message ListTimeSeriesRequest {
    string database = 1;
}

message ListTimeSeriesResponse {
    repeated string timeSeriesNames = 1;
    optional string error = 2;
}