syntax = "proto3";

option csharp_namespace = "GrpcAPI.timeseries";

package timeseries;

import "shared.proto";

service TimeSeries {
    rpc HasSerie (HasSerieRequest) returns (HasSerieResponse);
    rpc DeleteSerie (DeleteSerieRequest) returns (DeleteSerieResponse);
    rpc ClearSerie (ClearSerieRequest) returns (ClearSerieResponse);
    rpc ListSeries (ListSeriesRequest) returns (ListSeriesResponse);
    rpc ListEntries (ListEntriesRequest) returns (ListEntriesResponse);
    rpc GetEntries (GetEntriesRequest) returns (GetEntriesResponse);
    rpc HasEntry (HasEntryRequest) returns (HasEntryResponse);
    rpc GetEntry (GetEntryRequest) returns (GetEntryResponse);
    rpc PutEntry (PutEntryRequest) returns (PutEntryResponse);
    rpc DeleteEntry (DeleteEntryRequest) returns (DeleteEntryResponse);    
    rpc GetNearestEntry (GetNearestEntryRequest) returns (GetNearestEntryResponse);
    rpc GetFirstEntryBefore (GetFirstEntryBeforeRequest) returns (GetFirstEntryBeforeResponse);
    rpc GetFirstEntryAfter (GetFirstEntryAfterRequest) returns (GetFirstEntryAfterResponse);
    rpc GetFirstEntry (GetFirstEntryRequest) returns (GetFirstEntryResponse);
    rpc GetLastEntry (GetLastEntryRequest) returns (GetLastEntryResponse);
    rpc GetEntriesBetween (GetEntriesBetweenRequest) returns (GetEntriesBetweenResponse);
    rpc GetFirstNEntries (GetFirstNEntriesRequest) returns (GetFirstNEntriesResponse);
    rpc GetLastNEntries (GetLastNEntriesRequest) returns (GetLastNEntriesResponse);
    rpc GetEntriesBefore (GetEntriesBeforeRequest) returns (GetEntriesBeforeResponse);
    rpc GetEntriesAfter (GetEntriesAfterRequest) returns (GetEntriesAfterResponse);
}

message HasSerieRequest {
    string database = 1;
    string serie = 2;
}

message HasSerieResponse {
    bool hasSerie = 1;
    optional string error = 2;
}

message DeleteSerieRequest {
    string database = 1;
    string serie = 2;
}

message DeleteSerieResponse {
    optional string error = 1;
}

message ClearSerieRequest {
    string database = 1;
    string serie = 2;
}

message ClearSerieResponse {
    optional string error = 1;
}

message ListSeriesRequest {
    string database = 1;
    string serie = 2;
}

message ListSeriesResponse {
    repeated string series = 1;
    optional string error = 2;
}

message ListEntriesRequest {
    string database = 1;
    string serie = 2;
}

message ListEntriesResponse {
    repeated int64 timestamps = 1;
    optional string error = 2;
}

message GetEntriesRequest {
    string database = 1;
    string serie = 2;
}

message GetEntriesResponse {
    repeated bytes entries = 1;
    optional string error = 2;
}

message HasEntryRequest {
    string database = 1;
    string serie = 2;
    int64 timestamp = 3;
}

message HasEntryResponse {
    bool hasEntry = 1;
    optional string error = 2;
}

message GetEntryRequest {
    string database = 1;
    string serie = 2;
    int64 timestamp = 3;
}

message GetEntryResponse {
    bytes entry = 1;
    bool notFound = 2;
    optional string error = 3;
}

message PutEntryRequest {
    string database = 1;
    string serie = 2;
    int64 timestamp = 3;
    bytes entry = 4;
}

message PutEntryResponse {
    optional string error = 1;
}

message DeleteEntryRequest {
    string database = 1;
    string serie = 2;
    int64 timestamp = 3;
}

message DeleteEntryResponse {
    optional string error = 1;
}

message GetNearestEntryRequest {
    string database = 1;
    string serie = 2;
    int64 timestamp = 3;
}

message GetNearestEntryResponse {
    int64 timestamp = 1;
    bytes entry = 2;
    bool notFound = 3;
    optional string error = 4;
}

message GetFirstEntryBeforeRequest {
    string database = 1;
    string serie = 2;
    int64 timestamp = 3;
}

message GetFirstEntryBeforeResponse {
    int64 timestamp = 1;
    bytes entry = 2;
    bool notFound = 3;
    optional string error = 4;
}

message GetFirstEntryAfterRequest {
    string database = 1;
    string serie = 2;
    int64 timestamp = 3;
}

message GetFirstEntryAfterResponse {
    int64 timestamp = 1;
    bytes entry = 2;
    bool notFound = 3;
    optional string error = 4;
}

message GetFirstEntryRequest {
    string database = 1;
    string serie = 2;
}

message GetFirstEntryResponse {
    int64 timestamp = 1;
    bytes entry = 2;
    bool notFound = 3;
    optional string error = 4;
}

message GetLastEntryRequest {
    string database = 1;
    string serie = 2;
}

message GetLastEntryResponse {
    int64 timestamp = 1;
    bytes entry = 2;
    bool notFound = 3;
    optional string error = 4;
}

message GetEntriesBetweenRequest {
    string database = 1;
    string serie = 2;
    int64 from = 3;
    int64 to = 4;
}

message GetEntriesBetweenResponse {
    repeated int64 timestamps = 1;
    repeated bytes entries = 2;
    optional string error = 3;
}

message GetFirstNEntriesRequest {
    string database = 1;
    string serie = 2;
    int32 n = 3;
}

message GetFirstNEntriesResponse {
    repeated int64 timestamps = 1;
    repeated bytes entries = 2;
    optional string error = 3;
}

message GetLastNEntriesRequest {
    string database = 1;
    string serie = 2;
    int32 n = 3;
}

message GetLastNEntriesResponse {
    repeated int64 timestamps = 1;
    repeated bytes entries = 2;
    optional string error = 3;
}

message GetEntriesBeforeRequest {
    string database = 1;
    string serie = 2;
    int64 timestamp = 3;
}

message GetEntriesBeforeResponse {
    repeated int64 timestamps = 1;
    repeated bytes entries = 2;
    optional string error = 3;
}

message GetEntriesAfterRequest {
    string database = 1;
    string serie = 2;
    int64 timestamp = 3;
}

message GetEntriesAfterResponse {
    repeated int64 timestamps = 1;
    repeated bytes entries = 2;
    optional string error = 3;
}
